added the final version of Melli shoes

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lalezar&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/index.css">
@@ -15,11 +13,13 @@
     <div class="container">
       <div class="hero">
         <div class="hero-left">
-          <div class="image-row">
-            <img src="./assets/img/6.png" alt="img">
-            <img src="./assets/img/91.png" alt="img">
-            <img src="./assets/img/64.png" alt="img">
-            <img src="./assets/img/13.png" alt="img">
+          <div class="left-row">
+            <ul class="image-row">
+              <li><img src="./assets/img/6.png" alt="img"></li>
+              <li><img src="./assets/img/91.png" alt="img"></li>
+              <li><img src="./assets/img/64.png" alt="img"></li>
+              <li><img src="./assets/img/13.png" alt="img"></li>
+            </ul>
             <span class="customer"><span class="customer-num">۹۱,۸۵۳,۵۴۲</span> مشتری راضی</span>
           </div>
           <p class="content">فقط به علامت فیل اطمینان داشته باشید</p>
